--- a/package.json
+++ b/package.json
@@ -11,12 +11,18 @@
     "svgr": "npx @svgr/cli -d src/assets/svg --ignore-existing --typescript --no-dimensions public/svg"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.2",
     "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react-swc": "^3.3.2",
     "react": "^18.2.0",
+    "react-cool-onclickoutside": "^1.7.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.2",
+    "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.2",
+    "redux": "^4.2.1",
     "scss": "^0.2.4",
     "styled-components": "^6.0.5",
     "vite-plugin-svgr": "^3.2.0",
