--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,7 +2,7 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [ CICD_Test ]
+    branches: [ main ]
 
 jobs:
   build:
@@ -19,7 +19,7 @@ jobs:
         password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
     
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag gunho30811/searon-web:latest
+      run: docker build . --file Dockerfile --tag your-dockerhub-username/your-image-name:latest
 
     - name: Push the Docker image
-      run: docker push gunho30811/searon-web:latest
+      run: docker push your-dockerhub-username/your-image-name:latest
