docker stop || true

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,5 +18,5 @@ jobs:
         key: ${{ secrets.REMOTE_KEY }}
         script: |
           docker pull gunho30811/searon-web:latest
-          docker stop peaceful_joliot
+          docker stop peaceful_joliot || true
           docker run --name peaceful_joliot -d -p 80:3000 gunho30811/searon-web:latest
