--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.14.2",
+    "@mui/icons-material": "^5.14.3",
+    "@mui/material": "^5.14.4",
     "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react-swc": "^3.3.2",
+    "local-ssl-proxy": "^2.0.5",
     "react": "^18.2.0",
     "react-cool-onclickoutside": "^1.7.0",
     "react-dom": "^18.2.0",
