--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "vite-tsconfig-paths": "^4.2.0"
   },
   "devDependencies": {
+    "@material-ui/icons": "^4.11.3",
     "@svgr/webpack": "^8.1.0",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
