--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "serve": "^14.2.0",
     "styled-components": "^6.0.5",
     "vite-plugin-svgr": "^3.2.0",
-    "vite-tsconfig-paths": "^4.2.0"
+    "vite-tsconfig-paths": "^4.2.0",
+    "@vitejs/plugin-react": "^4.0.1"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
