--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/material": "^5.14.4",
     "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react-swc": "^3.3.2",
+    "axios": "^1.5.0",
     "local-ssl-proxy": "^2.0.5",
     "react": "^18.2.0",
     "react-cool-onclickoutside": "^1.7.0",
