--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,6 +12,10 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
+    - name: Setting .env
+      run: |
+          echo "VITE_NOTION_KEY = ${{secrets.VITE_NOTION_KEY}}" >> .env
+
     - name: Login to DockerHub
       uses: docker/login-action@v1
       with:
